tests/baselines/reference/privateIndexer2.errors.txt
privateIndexer2.ts(4,15): error TS1005: ']' expected.
privateIndexer2.ts(4,17): error TS2693: 'string' only refers to a type, but is being used as a value here.
privateIndexer2.ts(4,23): error TS1005: ',' expected.
privateIndexer2.ts(4,24): error TS1136: Property assignment expected.
privateIndexer2.ts(4,26): error TS2693: 'string' only refers to a type, but is being used as a value here.
privateIndexer2.ts(4,32): error TS1005: ',' expected.


==== privateIndexer2.ts (6 errors) ====
    // private indexers not allowed
    
    var x = {
        private [x: string]: string;
                  ~
!!! error TS1005: ']' expected.
                    ~~~~~~
!!! error TS2693: 'string' only refers to a type, but is being used as a value here.
                          ~
!!! error TS1005: ',' expected.
                           ~
!!! error TS1136: Property assignment expected.
                             ~~~~~~
!!! error TS2693: 'string' only refers to a type, but is being used as a value here.
                                   ~
!!! error TS1005: ',' expected.
    }
    
    var y: {
        private[x: string]: string;
    }